# upgrade-impact-python

./: .gitignore  .pre-commit-config.yaml  .upgrade-analyzer.toml.example  .upgradeignore.example  LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: upgrade-analysis.yml
src/upgrade_analyzer/: __init__.py  analyzer.py  cache.py  cli.py  config.py  conflict_detector.py  enterprise.py  health.py  http_client.py  models.py  notifications.py  resolver.py  sbom.py
src/upgrade_analyzer/intelligence/: __init__.py  api_differ.py  changelog_fetcher.py  changelog_nlp.py  llm_analyzer.py  pypi_client.py  risk_scorer.py  security.py
src/upgrade_analyzer/parsers/: __init__.py  base.py  lockfiles.py  pipfile.py  pyproject.py  requirements.py
src/upgrade_analyzer/recommendations/: __init__.py  advisor.py
src/upgrade_analyzer/reporters/: __init__.py  json_formats.py  markdown.py  terminal.py
src/upgrade_analyzer/scanner/: __init__.py  ast_analyzer.py  file_discovery.py  usage_mapper.py
tests/: conftest.py  test_ast_analyzer.py  test_cache.py  test_cli.py  test_code_analysis.py  test_conflict_detector.py  test_health_scorer.py  test_http_client.py  test_lockfile_parsers.py  test_parsers.py  test_reporters.py  test_risk_scorer.py  test_sbom.py
